welcome.lessons.welcome.bat.bool2.RedTicket.scala.error
redTicket:2: error: reassignment to val
	if (a=2 && a=b && a=c) {
             ^redTicket:2: error: type mismatch;
 found   : Unit
 required: Int
	if (a=2 && a=b && a=c) {
        ^